--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,23 +6,60 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Bellefair&display=swap" rel="stylesheet">
 
   <title>Frontend Mentor | Space tourism website</title>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+  <nav>
+    <div class="navbar">
+      <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="48" height="48">
+        <g fill="none" fill-rule="evenodd">
+          <circle cx="24" cy="24" r="24" fill="#FFF" />
+          <path fill="#0B0D17"
+            d="M24 0c0 16-8 24-24 24 15.718.114 23.718 8.114 24 24 0-16 8-24 24-24-16 0-24-8-24-24z" />
+        </g>
+      </svg>
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
+      <div class="line"></div>
 
-  So, you want to travel to
-  Space
-  Let’s face it; if you want to go to space, you might as well genuinely go to
-  outer space and not hover kind of on the edge of it. Well sit back, and relax
-  because we’ll give you a truly out of this world experience!
+      <ul class="nav-links">
+        <li class="nav-link"><a href="index.html"><span>00 </span>Home</a></li>
+
+        <li class="nav-link"><a href="./destination-moon.html"><span>01 </span>Destination</a></li>
+
+        <li class="nav-link"><a href="./crew-commander.html"><span>02 </span>Crew</a></li>
+
+        <li class="nav-link"><a href="./technology-vehicle.html"><span>03 </span>Technology</a></li>
+
+      </ul>
+    </div>
+  </nav>
+  <main class="home-hero">
+    <section class="home-intro">
+      <h2 class="home-subheading">
+        So, you want to travel to
+      </h2>
+      <h1 class="home-heading">
+        Space
+      </h1>
+      <p class="home-paragraph">
+        Let’s face it; if you want to go to space, you might as well genuinely go to
+        outer space and not hover kind of on the edge of it. Well sit back, and relax
+        because we’ll give you a truly out of this world experience!
+      </p>
+    </section>
+    <section class="home-feature"> Explore</section>
+  </main>
+
+
+
+
+
 
   Explore
 
