--- a/starter-code/technology-capsule.html
+++ b/starter-code/technology-capsule.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Space tourism website</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
   00 Home
@@ -24,9 +27,10 @@
   The terminology...
   Space capsule
 
-  A space capsule is an often-crewed spacecraft that uses a blunt-body reentry 
-  capsule to reenter the Earth's atmosphere without wings. Our capsule is where 
-  you'll spend your time during the flight. It includes a space gym, cinema, 
+  A space capsule is an often-crewed spacecraft that uses a blunt-body reentry
+  capsule to reenter the Earth's atmosphere without wings. Our capsule is where
+  you'll spend your time during the flight. It includes a space gym, cinema,
   and plenty of other activities to keep you entertained.
 </body>
+
 </html>
